# orchx

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.orchx/: memory.db
docs/: .smoke-watch.md  ANALYSIS.md  architecture.md  changelog.md  comparison.md  contributing.md  internals.md  recommendations.md
docs/recipes/: with-docker-runtime.md  with-github-projects.md  with-memory-rag.md  with-slack-notifications.md
examples/hello-world/: README.md
examples/with-dashboard/: README.md
examples/with-docker-runtime/: README.md
examples/with-mcp-server/: README.md
src/orchx/: .env.example  README.md  TOOLING_GAPS.md  __init__.py  __main__.py  acceptance.py  cli.py  cost.py  dag.py  init_project.py  models.py  orchestrator.py  paths.py  pr.py  pr_watcher.py  preloaded_context.py  replanner.py  runner.py  runtime.py  tui.py  worktree.py
src/orchx/agent/: __init__.py  _docker_entry.py  frontmatter.py  llm.py  permissions.py  prompts.py  worker.py
src/orchx/agent/tools/: __init__.py  browser.py  fs.py  mcp.py  search.py  shell.py  symbols.py  task.py  todo.py  web.py
src/orchx/orchestrator/: __init__.py  context.py  core.py  git_utils.py  logging_utils.py  supervisor.py
src/orchx/plugins/: __init__.py  contracts.py  registry.py
src/orchx/plugins/memory/: __init__.py  noop.py  sqlite.py
src/orchx/plugins/notifiers/: __init__.py  _http.py  discord.py  noop.py  slack.py  webhook.py
src/orchx/plugins/runtimes/: __init__.py  docker.py  local.py
src/orchx/plugins/scm/: __init__.py  github.py
src/orchx/plugins/trackers/: __init__.py  github.py  github_projects.py
src/orchx/prompts/: orchX-architect.md  orchX-debugger.md  orchX-implementer.md  orchX-merger.md  orchX-planner.md  orchX-reviewer.md  orchX-tester.md
src/orchx/schemas/: plan.schema.json  result.schema.json  task.template.md
src/orchx/templates/: PROJECT.md  README.md  config.yaml  env.example
src/orchx/templates/prompts/: orchX-architect.md  orchX-debugger.md  orchX-implementer.md  orchX-merger.md  orchX-planner.md  orchX-reviewer.md  orchX-tester.md
src/orchx/templates/runtime/: Dockerfile.worker
src/orchx/tests/: __init__.py  test_frontmatter.py  test_llm_effort.py  test_permissions.py  test_prompts.py  test_tools.py  test_worker.py  test_worktree_macos_dups.py
src/orchx/tests/fixtures/: mock_llm.py
src/orchx/tests/integration/: test_agent_with_fake_llm.py
src/orchx/tests/unit/: test_acceptance_escapes.py  test_browser_tool.py  test_cli_tracker_task.py  test_cost.py  test_deprecated_agent_aliases.py  test_frontmatter.py  test_github_projects_tracker.py  test_local_runtime.py  test_mcp_bridge.py  test_memory_extraction.py  test_mock_llm.py  test_notifier_plugins.py  test_orchestrator_context.py  test_orchestrator_git_utils.py  test_permissions.py  test_plan_tracker_task_id.py  test_plugins_memory.py  test_plugins_registry.py  test_pr_watcher.py  test_preloaded_context.py  test_symbol_tools.py  test_tools.py  test_web_dashboard.py  test_worktree_macos_dups.py
src/orchx/web/: __init__.py  federation.py  server.py
src/orchx/web/static/: app.js  index.html  style.css
