[project]
name = "orchx"
version = "0.2.0"
description = "Параллельный мультиагентный рой: декомпозирует задачу через LLM-планнер, запускает воркеров в изолированных git worktree-ах, собирает результат и открывает PR."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "orchX contributors" },
]
keywords = ["llm", "agents", "swarm", "multi-agent", "git", "worktree", "orchestrator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    # OpenAI-совместимый клиент. Все вызовы LLM идут через него — orchx
    # умеет работать с любым endpoint'ом, у которого есть /v1/chat/completions
    # с tool calling (proxies, OpenRouter, vLLM, Ollama-shim).
    "openai>=1.50",
    # YAML-frontmatter в .md-промптах ролей.
    "PyYAML>=6.0",
    # HTTP-клиент (используется поверх openai SDK для управления таймаутами).
    "httpx>=0.27",
    # WebFetch tool (опционально включаемый): HTML→Markdown конвертация для
    # ролей, которым нужно читать внешние доки. По умолчанию tool отключён
    # через permission.webfetch: deny.
    "markdownify>=0.13.1",
]

[project.optional-dependencies]
# Базовые dev-инструменты (lint/type-check/build/publish).
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.1",
]
# Тестирование (выделено из dev — на CI ставится отдельно).
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-mock>=3",
]
# REST/WebSocket dashboard (P1.4).
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]
# MCP-bridge: clientside, чтобы воркеры могли вызывать tools со сторонних MCP-серверов (P1.1).
mcp = [
    "mcp>=1.6",
]
# Docker-runtime plugin (P1.2).
docker = [
    "docker>=7.1",
]
# Browser tool (P1.7).
browser = [
    "playwright>=1.47",
]
# Embedding-based memory recall (P0.3/P2.4) — без зависимости работает FTS-fallback.
memory-embed = [
    "numpy>=1.26",
]
# Pydantic уже в основных deps как транзитивная — здесь форсируем минимальную версию для миграции моделей (P3.4).
pydantic = [
    "pydantic>=2.7",
]
# Всё-в-одном (для удобства разработчиков).
all = [
    "orchx[dev,test,server,mcp,docker,browser,memory-embed,pydantic]",
]

[project.urls]
Homepage = "https://github.com/411241075-hdf/orchx"
Repository = "https://github.com/411241075-hdf/orchx"
Issues = "https://github.com/411241075-hdf/orchx/issues"

[project.scripts]
orchx = "orchx.cli:main"

# ---------------------------------------------------------------------------
# Plugin-slot entry-points (P0.2).
#
# Сторонние пакеты могут регистрировать плагины через тот же механизм:
#   [project.entry-points."orchx.runtime"]
#   podman = "my_pkg.runtime:PodmanRuntime"
# ---------------------------------------------------------------------------

[project.entry-points."orchx.runtime"]
local = "orchx.plugins.runtimes.local:LocalRuntime"
docker = "orchx.plugins.runtimes.docker:DockerRuntime"

[project.entry-points."orchx.tracker"]
github = "orchx.plugins.trackers.github:GithubTracker"

[project.entry-points."orchx.scm"]
github = "orchx.plugins.scm.github:GithubSCM"

[project.entry-points."orchx.notifier"]
noop = "orchx.plugins.notifiers.noop:NoopNotifier"
slack = "orchx.plugins.notifiers.slack:SlackNotifier"
discord = "orchx.plugins.notifiers.discord:DiscordNotifier"
webhook = "orchx.plugins.notifiers.webhook:WebhookNotifier"
dashboard = "orchx.web.server:DashboardNotifier"

[project.entry-points."orchx.memory"]
noop = "orchx.plugins.memory.noop:NoopMemory"
sqlite = "orchx.plugins.memory.sqlite:SqliteMemory"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["orchx*"]

[tool.setuptools.package-data]
# orchX шиппит:
#  - JSON-схемы плана/результата (читаются runtime'ом из package_root/schemas);
#  - шаблон task.md (рендер контракта для воркера);
#  - дефолтные роль-промпты (templates/prompts/orchX-*.md);
#  - дефолтные .env.example/PROJECT.md/README.md (templates/) для `orchx init`;
#  - py.typed маркер для type checker'ов.
"orchx" = [
    "schemas/*.json",
    "schemas/*.md",
    "templates/*.md",
    "templates/env.example",
    "templates/prompts/*.md",
    "templates/runtime/Dockerfile.worker",
    "web/static/*",
    "py.typed",
]

# ---------------------------------------------------------------------------
# Линтер / типы / тесты
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "T201", # print
]
ignore = [
    "E501",  # line-too-long — у нас встречаются длинные строки в текстовых промптах/таск-файлах.
    "E741",  # ambiguous-variable-name — l/O иногда нужны.
]

[tool.ruff.lint.per-file-ignores]
"src/orchx/templates/**" = ["E", "F", "T201"]
"src/orchx/tests/**" = ["T201", "B"]
# FastAPI Depends/Body/Header — обычный pattern (B008 — false positive).
"src/orchx/web/**" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/orchx/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
# Coverage опционально (включается в CI через pytest-cov).
addopts = [
    "--strict-markers",
]
markers = [
    "integration: end-to-end интеграционные тесты с FakeLLMClient (медленные)",
    "slow: тесты, выполняющиеся >1s",
    "requires_docker: тесты, которым нужен запущенный docker daemon",
    "requires_network: тесты, которым нужен доступ в сеть",
]

[tool.coverage.run]
source = ["src/orchx"]
omit = [
    "src/orchx/tests/*",
    "src/orchx/templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
